--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <input type="text" id="email" name="email" value="1126560716@qq.com" required><br><br>
     
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" value="1126560716hU" required><br><br>
+    <input type="password" id="password" name="password" required><br><br>
     
     <label for="mins">Mins:</label>
     <input type="number" id="mins" name="mins" value="20000" required><br><br>
